--- a/src/style.css
+++ b/src/style.css
@@ -59,4 +59,31 @@ nav {
     gap: 20px; /* ponemos el gap entre las opciones */
 }
 
+/*   La linea   */
+#linea {
+    background-color: #F4B46C;
+    height: 2px;
+    margin: 2vh 3vh;
+}
+
+
 /*  Los pollos  */
+#polloLaterales {
+    margin-left: 10vh;
+    display: inline-block;
+}
+
+#pollos {
+    margin-left: 15vh;
+    width: 30vh;
+}
+
+
+
+/* beta */
+#beta {
+    position: fixed;
+    height: 80px;
+    margin-top: -60px;
+    margin-left: -20px;
+}
