--- a/src/style.css
+++ b/src/style.css
@@ -19,12 +19,12 @@ body {
 
 #RinconCaseroIcono { /* icono de jose fijo a la izquierda */
     position: fixed;
-    margin-left: 80px;
+    margin-left: 5%;
 }
 
 #Tfriconcasero { /* icono de jose fijo a la izquierda */
     position: fixed;
-    margin-left: 105px;
+    margin-left: 7%;
     margin-top: 360px;
 }
 
@@ -70,6 +70,9 @@ nav {
 .imagenes {
     width: 30%;
     border-radius: 50px;
+    width: 30%;
+    border-radius: 50px;
+    margin-bottom: 3vh;
 }
 
 /*  Los pollos  */
@@ -83,10 +86,20 @@ nav {
 
 
 /*   NOSOTROS   */
+#nosotros-container {
+    display: flex;
+    align-items: center; /* Centra los objetos */
+    justify-content: center; /* centra el texto en el medio */
+    gap: 10vh; /* espacio entre la imagen y el texto */
+    margin:3vh;
+}
+
 #nosotros {
     width: 50%;
-    margin-left: 10vh;
-    display: inline-block;
+    margin-left: 0; /* quita el margin de la izquierda para centrarlo bien */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 
@@ -96,4 +109,10 @@ nav {
     height: 80px;
     margin-top: -60px;
     margin-left: -20px;
+}
+
+
+/*      RESPONSIVE      */
+@media (max-width:1480px) {
+    
 }
